# verbii

./: .gitattributes  .gitignore  CALLFRAME-DESIGN-NOTES.txt  CODE-STATS.txt  DESIGN-NOTES.md  LICENSE  PORTS-STATUS.txt  README.md  SETUP-BUILD-ENVIRONMENT.txt  SETUP-CYGWIN.txt  SETUP-MINGW64.txt  SETUP-UBUNTU.txt  SETUP-WINDOWS.txt  TODO.txt  clean-all-ports.sh  clear-all-caches.sh  count-code.sh  run-all-regressions.sh  setup.bat  setup.sh
ATTIC/: compiler.py  test.cpp
bootstrap/: READ-ME-BEFORE-RUNNING.txt  boottest.sh  compiler.py  make-bootstrap.sh
c/: MEMORY-USAGE-NOTES.txt  demo-builtins.verb  make.sh  setup-linux.sh  setup-mingw.sh  vc-setup.bat
c++/: Makefile  boot.verb  compiler.verb  demo_rosetta_1.txt  demo_rosetta_1.verb  demo_syntax.txt  deserialize.cpp  deserialize.hpp  expect_basic.txt  expect_unittest_basic.txt  expect_unittest_core.txt  expect_unittest_errors.txt  initlib.txt  interpreter.cpp  interpreter.hpp  langtypes.cpp  langtypes.hpp  main.cpp  native.cpp  native.hpp  opcodes.cpp  opcodes.hpp  reader.cpp  reader.hpp  regression.sh  repl.cpp  run.cpp  stream.verb  syntax.cpp  syntax.hpp  tagging.cpp  tagging.hpp  test.cpp  test_reader.cpp  unittest_basic.txt  unittest_core.txt  unittest_errors.txt  util.cpp  vs-verbii.vcxproj.filters  xmalloc.cpp  (+1 more)
c/src/: CMakeLists.txt  TIMES.txt  build-debugging.sh  build-test-gc-object.sh  build_defs.h  deserialize.c  deserialize.h  errors.c  errors.h  gc_object.c  gc_object.h  interpreter.c  interpreter.h  langtypes.c  langtypes.h  main.c  native.c  native.h  opcodes.c  opcodes.h  test_gc_object.c  testmain.c  util.c  util.h  xmalloc.c  xmalloc.h
chicken/: BUILD.txt  Makefile  OPTIMIZATION.txt  bench_objs.scm  csc  csi  data.txt  deserializer.scm  errors.scm  interpreter.scm  langtypes.scm  main.scm  min.scm  native.scm  regression.sh  verbii.bat  verbii.scm
cpp/: Makefile  clean.sh  demo_rosetta_1.verb  deserialize.cpp  deserialize.hpp  errors.hpp  regression.sh  setup-linux.sh  setup-mingw.sh  util.cpp  util.hpp  vc-clean.bat  vc-make.bat  vc-setup.bat  verbii  verbii.bat  vs-verbii.sln  vs-verbii.vcxproj  xmalloc.hpp
csharp/: HOWTO-BUILD.txt  build.bat  csharp.csproj  deserialize.cs  errors.cs  interpreter.cs  langtypes.cs  main.cs  min.cs  mono-build.bat  mono-build.sh  mono-clean.sh  mono-regression.sh  native.cs  opcodes.cs  reader.cs  regression.bat  repl.cs  run.bat  syntax.cs  test_reader.cs  verbii.bat
extras/: README.txt  verbii-userlang-for-notepad++.xml
lib/: boot.verb  boot.verb.b  compiler.verb  compiler.verb.b  hashing.verb  init.txt  init.verb  init.verb.b  numeric.verb  patches.verb  random-mersenne.verb  random-worker.verb  random-xorshift32.verb  random-xoshiro128++.verb  random-xoshiro128starstar.verb  random.verb  repl.verb  sorting.verb  unittest.verb
lua/: SETUP-LUA.txt  TODO-LUA.txt  deserialize.lua  interpreter.lua  langtypes.lua  main.lua  min.lua  native.lua  opcodes.lua  reader.lua  regression.sh  repl.lua  syntax.lua  test_reader.lua  verbii  verbii.bat
new-python/: boottest.sh  compiler.py  deserialize.py  errors.py  interpreter.py  langtypes.py  native.py  regression.sh  repl.py  sample.verb  t.txt
node/: langtypes.js
python/: deserialize.py  interpreter.py  langtypes.py  main.py  min.py  native.py  opcodes.py  pypy-regression.bat  reader.py  regression.sh  repl.py  syntax.py  test_reader.py  verbii  verbii.bat
reference/: Makefile  find-lower-max-double.cpp  gen_adler32_results.py  gen_crc32_results.py  mersenne_twister_stdlib.cpp  prime-sieve.py  xorshift32  xorshift32.c  xoshiro128plusplus.c  xoshiro128starstar.c
scripts/: compile.sh
unittests/: README.txt  demo_math.txt  demo_math.verb  expect_demo_math.txt  expect_unittest_basic.txt  expect_unittest_core.txt  expect_unittest_demo.txt  expect_unittest_errors.txt  makediffs.sh  totdiffs.sh  unittest_basic.txt  unittest_basic.verb  unittest_core.txt  unittest_core.verb  unittest_demo.verb  unittest_errors.txt  unittest_errors.verb
verb/: all-regressions-tests.sh  automata-1.verb  automata-2.verb  bench-loops.verb  bench-stack-vs-named-args.verb  benchmark.verb  bfminify.verb  brain.verb  brainf-common.verb  closure-env.verb  cltest.verb  compile.verb  demo-closures-v2.verb  demo-closures.verb  demo-common.verb  demo-randomness.verb  demos_2.verb  dev.verb  extra-tests.verb  frametest.verb  games.verb  hashing.verb  iterators.verb  jitbrain.verb  jitbrain2.verb  json.verb  lorem-ipsum.txt  (+53 more)
(+67 files in other folders)
